# dskmanager-rust

./: .gitignore  Cargo.toml  README.md  SCREEN.SCR
examples/: sandbox.rs
src/: amstrad_basic.rs  boot.rs  error.rs  fdc.rs  lib.rs  map.rs  protection.rs  sinclair_basic.rs
src/filesystem/: cpm.rs  disciple.rs  mgt.rs  mod.rs  sam.rs
src/format/: constants.rs  mod.rs  spec.rs  specification.rs
src/image/: builder.rs  disk.rs  mod.rs  sector.rs  track.rs
src/io/: mgt_reader.rs  mod.rs  reader.rs  writer.rs
tests/: integration.rs
